fix(homepage, forms): fixed laggy collapsing animations and minor styling issues

--- a/public/stylesheets/forms.css
+++ b/public/stylesheets/forms.css
@@ -347,10 +347,9 @@ box-shadow: 0 0 0 0.25rem rgba(var(--bs-primary-rgb),.25);
   float: right;
 }
 
-#manage-images-div,
-#upload-more-div{
-  padding-left: 4em;
-  padding-bottom: 6em;
+
+#edit-images-col{
+  max-width: 420px;
 }
 
 #manage-images-div img{
@@ -375,6 +374,10 @@ box-shadow: 0 0 0 0.25rem rgba(var(--bs-primary-rgb),.25);
 
 #manage-images-options-div i {
   color: aliceblue;
+}
+
+#image-upload-wrapper > form{
+  margin: 0;
 }
 
 #back-link-div,
@@ -433,6 +436,7 @@ box-shadow: 0 0 0 0.25rem rgba(var(--bs-primary-rgb),.25);
 
 .menu-image-edit{
 padding: 3em;
+white-space: nowrap;
 }
 
 .size-input{
@@ -517,6 +521,10 @@ padding: 3em;
 
   .confirm-button:disabled{
     background-color: #3D3D3D;
+  }
+
+  .confirm-button:disabled:hover{
+    color: #fff;
   }
 
   .delete-button {
