--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -14,6 +14,10 @@ body{
     display: none;
 }
 
+form{
+    margin: 0
+}
+
 #home-box {
     position: relative;
     top: 40vh;
@@ -26,9 +30,52 @@ h6 a{
 
 }
 
+
+
 h6:hover{
     cursor: pointer;
 }
+
+.confirm-button {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* margin-bottom: 20px; */
+    padding: 6px 14px !important;
+    font-family: 'Roboto', sans-serif;
+    border-radius: 6px;    
+    color: whitesmoke;
+    background-color: green;
+    border: none;
+    box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.8);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+
+    transition: background-color 1s, color 1s;
+  }
+  
+  .confirm-button:focus {
+    box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.1), 0px 0px 0px 3.5px rgba(58, 108, 217, 0.5);
+    outline: 0;
+  }
+
+  .confirm-button:hover {
+    color: green;
+    background: #fff;
+
+  }
+
+
+#forgot-button:hover{
+    cursor: pointer;
+
+}
+
+.back-button:hover{
+    cursor: pointer;
+}
+
 
 @media all and (orientation:portrait) {
 
@@ -66,6 +113,7 @@ h6:hover{
         text-align: justify;
     }
 
+ 
     #back-button-0{
         transform: translateY(195px);
     }
